# forky

./: .gitignore  Cargo.toml  Cross.toml  README.md  example.ts  package-lock.json  package.json  preinstall.sh  types.d.ts
crates/forky/: Cargo.toml
crates/forky/src/: config.rs  lib.rs  txrequest.rs
lib/: example.js  index.cjs  index.d.cts  load.cjs
src/: abstract_stack.rs  abstract_value.rs  analysis.rs  cannonical.rs  config.rs  example.ts  index.cts  lib.rs  load.cts  opcodes.rs  utils.rs
